--- a/styles.css
+++ b/styles.css
@@ -1,189 +1,270 @@
-.irubaqidze{
+.geo{
+    font-family: "Arial GEO", sans-serif;
+}
+.irubaqidze {
     font-family: "BPG Irubaqidze", sans-serif;
-}
-.dedaena{
+  }
+  .dedaena {
     font-family: "BPG DedaEna Nonblock", sans-serif;
-}
-.alk{
+  }
+  .alk {
     font-family: "ALK Life", sans-serif;
-}
-body{
+  }
+  body {
     min-height: 100vh;
+  
     background-color: lightblue;
-}
-header{
+    display: flex;
+    flex-direction: column;
+  }
+  header {
     padding-top: 1%;
     display: flex;
-    
-   
-   
-}
-.header-container{
+  }
+  .header-container {
     display: flex;
     flex-direction: row;
     width: 100%;
     gap: 15%;
     align-items: end;
     justify-content: space-evenly;
-   
-   
-
-}
-.name-div{
+  }
+  .name-div {
     display: flex;
     width: min-content;
-    align-items:end;
+    align-items: end;
     gap: 5px;
     position: relative;
-    
-}
-.house-icon{
+  }
+  .house-icon {
     width: 50px;
     height: 50px;
-    
-    
-}
-.fa-heart{
-
+  }
+  .fa-heart {
     position: absolute;
     top: 20px;
     left: 16.5px;
-   
-    
-}
-@keyframes heart{
-    from{color:rgb(238, 224, 234)}
-    to{
-        color: rgb(228, 98, 174)
+  }
+  @keyframes heart {
+    from {
+      color: rgb(238, 224, 234);
     }
-}
-.heart{
+    to {
+      color: rgb(228, 98, 174);
+    }
+  }
+  .heart {
     width: 5px;
     height: 5px;
-    color:lightpink;
+    color: lightpink;
     animation-name: heart;
     animation-duration: 5s;
     animation-iteration-count: infinite;
-
-}
-.name{
+  }
+  .name {
     display: flex;
     font-size: 30px;
     font-weight: 900;
     letter-spacing: 2px;
     color: rgb(228, 98, 174);
-   
-    
-}
-
-ul{
+  }
+  
+  ul {
     display: flex;
-    gap: 60PX;
-}
-.li-design{
+    gap: 60px;
+  }
+  .active{
+    font-size: 18px;
+    color: rgb(228, 98, 174);
+    letter-spacing: 3px;
+    
+  }
+  .li_design {
     font-size: 18px;
     color: dodgerblue;
-    }
-.li-design:hover{
-    
-    color:rgb(228, 98, 174) ;
-    transition: all 1s;
-} 
-main{
+    letter-spacing: 3px;
+    transition: all 0.5s ease-in;
+  }
+  .li_design:hover {
+    color: rgb(228, 98, 174);
+    transition: all 0.5s ease;
+  }
+  main {
+    width: 100%;
     display: flex;
+    align-items: center;
     justify-content: center;
-
-}
-
-.main-container{
-    margin-top: 2%;
+    margin-top: 1.5%;
+    margin-bottom: 0.5%;
+  }
+  .right {
     display: flex;
-    margin-left: 10%;
-    position: relative;}  
-.img1{
-    width: 35%;
-    height: 64.5%;
-    object-fit: cover;
-} 
-.img2{
-    
-    width: 26%;
-    height: 26%;
-    object-fit: cover;
-    
-
-}
-.img4{
-    
-    
-    width: 52%;
-    height: 40%;
-    object-fit: cover;
-    margin-top: 17%;
-    margin-left: -52%;
-    
-}
-.main-div1{
+    align-items: center;
+    flex-direction: column;
+  }
+  .twoImage {
+    display: flex;
+    align-items: center;
+  }
+  .main_container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+  .img1 {
+    width: 400px;
+    height: 700px;
+    background-image: url("./images/cake.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 15px 0px  0px 15px;
+    background-color: azure;
+  
+    cursor: pointer;
+  }
+  .img1:hover{
+    opacity: 0.5;
+    box-shadow: 0 5.063rem 5.188rem rgba(31, 50, 81, 0.12), 0 5.063rem 5.125rem rgba(31, 50, 81, 0.24);
+  }
+  .img2 {
+    width: 500px;
+    height: 350px;
+    background-image: url("./images/kuchmachi.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    cursor: pointer;
+  }
+  .img2:hover{
+    opacity: 0.5;
+    box-shadow: 0 5.063rem 5.188rem rgba(31, 50, 81, 0.12), 0 5.063rem 5.125rem rgba(31, 50, 81, 0.24);
+  }
+  .img3 {
+    width: 500px;
+    height: 350px;
+    background-image: url("./images/georgian-salad.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 0px 15px 0px 0px;
+    cursor: pointer;
+  }
+  .img3:hover{
+    opacity: 0.5;
+    box-shadow: 0 5.063rem 5.188rem rgba(31, 50, 81, 0.12), 0 5.063rem 5.125rem rgba(31, 50, 81, 0.24);
+  }
+  .img4 {
+    background-image: url("./images/khachapuri.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 1000px;
+    height: 350px;
+    border-radius: 0px 0px 15px 0px;
+    cursor: pointer;
+  }
+  .img4:hover{
+    opacity: 0.5;
+    box-shadow: 0 5.063rem 5.188rem rgba(31, 50, 81, 0.12), 0 5.063rem 5.125rem rgba(31, 50, 81, 0.24);
+  }
+  .main-div1 {
     border-radius: 5px;
     width: 33%;
     height: 28%;
     background-color: rgb(116, 123, 131);
     position: absolute;
-    left: 24%;
-    top: 20%;
     display: flex;
     flex-direction: column;
     gap: 8%;
-    align-items:center;
+    align-items: center;
     opacity: 80%;
     padding-top: 2%;
-    
-   
-}
-.chef-hat{
+  }
+  .chef-hat {
     width: 100px;
     height: 100px;
-    
-    
-}
-.div1-p{
+  }
+  .div1-p {
     font-weight: 700;
     color: aliceblue;
     font-size: 32px;
     line-height: normal;
     text-align: center;
-}
-.let-in{
-    display: flex;
-    background-color: rgb(88, 150, 201);
-    padding-left: 8%;
-    padding-right: 8%;
-    padding-top: 4%;
-    padding-bottom: 4%;
-   
-
-}
-.letin-p{
+  }
+  
+  button {
     letter-spacing: 2px;
     font-weight: 500;
     font-size: 20px;
     color: white;
-}
-.let-in:hover{
-    background-color: white;
-    transition: 2s;
-}
-.letin-p:hover{
-    
-    color: rgb(88, 150, 201);
-    transition: 2s;
-}
-footer{
-    
+    background-color: rgb(88, 150, 201);
+    width: 250px;
+    height: 70px;
+    transition: all 0.5s ease-in;
+    border: none;
+    cursor: pointer;
+  }
+  button:hover {
+    background-color: rgb(255,255,255);
+    color: rgb(88, 150, 201);;
+    transition: all 0.5s ease-in;
+  }
+  
+  footer {
+    border-top: 10px dotted rgb(228, 98, 174);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    gap: 400px;
+   
+  }
+  .footer_info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 600px;
+    gap: 10px;
+  }
+  
+  .addres{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+  .circle{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:rgb(219, 132, 183);
+  }
+  .information-div{
+    display: flex;
+   align-items: baseline;
+    gap: 10gipx;
+  }
+  .information{
+    font-weight: 400;
+    font-size: 24px;
+    color: white;
+  }
+  .contact > p{
+    color: white;
+    font-size: 20px;
+    font-weight: 400;
+      }
+  .contact{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 2%;
-    width: 100%;
-    border-top: 2px solid red;
-}
+    gap: 7px;
+  } 
+  .contact > a{
+    color:#0caed6;
+    font-size: 16px;
+  }   
