--- a/comeuli.css
+++ b/comeuli.css
@@ -15,6 +15,9 @@ body {
   background-image: url("./images/back.jpg");
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 header {
   margin-bottom: 10%;
@@ -178,8 +181,8 @@ footer {
   align-items: center;
 }
 .circle {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -354,6 +357,15 @@ footer {
   }
 }
 @media (min-width: 1440px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .container1{
+    width: 1200px;
+  }
   .Menu {
     display: none;
   }
@@ -377,6 +389,7 @@ footer {
     gap: 15%;
     align-items: end;
     justify-content: space-evenly;
+    padding-left: 10%;
   }
 
   ul {
@@ -424,8 +437,8 @@ footer {
   }
   .img {
     border-radius: 10px;
-    width: 500px;
-    height: 450px;
+    width: 300px;
+    height: 250px;
     object-fit: cover;
     cursor: pointer;
   }
@@ -449,8 +462,8 @@ footer {
     align-items: center;
   }
   .circle {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
