--- a/mzaProducti.css
+++ b/mzaProducti.css
@@ -15,6 +15,9 @@
     background-image: url("./მზაპროდუქტები/back.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
   header {
     margin-bottom: 10%;
@@ -178,8 +181,8 @@
     align-items: center;
   }
   .circle {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -245,7 +248,7 @@
       flex-direction: row;
       margin-bottom: 10px;
       width: 100%;
-      gap: 15%;
+      padding-left: 0%;
       align-items: end;
       justify-content: space-evenly;
     }
@@ -255,6 +258,7 @@
       flex-direction: row;
       width: auto;
       gap: 20px;
+      width:auto ;
     }
     .house-icon {
       width: 50px;
@@ -377,6 +381,7 @@
       gap: 15%;
       align-items: end;
       justify-content: space-evenly;
+      padding-left: 10%;
     }
   
     ul {
@@ -424,8 +429,8 @@
     }
     .img {
       border-radius: 10px;
-      width: 500px;
-      height: 450px;
+      width: 300px;
+      height: 250px;
       object-fit: cover;
       cursor: pointer;
     }
@@ -481,5 +486,8 @@
     .contact > a {
       color: #0caed6;
       font-size: 20px;
+    }
+    .container1{
+      width: 1200px;
     }
   }
