--- a/registrationStyle.css
+++ b/registrationStyle.css
@@ -22,12 +22,11 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
   min-height: 100vh;
- background-image: url("./images/1.jpg");
- background-size: 100% 100%;
+  background-image: url("./images/1.jpg");
+  background-size: 100% 100%;
   background-repeat: no-repeat;
-  font-size: 1.2rem;
+  padding-top: 2rem;
 }
 .title {
   margin-bottom: 40px;
@@ -39,10 +38,11 @@ form {
   flex-direction: column;
   gap: 20px;
 }
-.welcome{
-  font-weight: 500;
+.welcome {
+  font-weight: 800;
   font-size: 32px;
   color: lightpink;
+  letter-spacing: 3px;
 }
 .formm {
   position: relative;
@@ -79,11 +79,14 @@ form {
   top: 0.8rem;
   padding: 0 0.5rem;
   color: rgb(193, 104, 235);
+  background-color: white;
   cursor: text;
   font-size: 16px;
   transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
-  
 }
+
+
+
 .submit {
   width: 100px;
   height: 30px;
@@ -93,11 +96,12 @@ form {
   color: white;
   cursor: pointer;
   margin-bottom: 30px;
+  transition: all 0.5s ease-in-out;
 }
-.submit:hover{
-   background-color:  #18ffff ;
-   color: rgb(190, 79, 181);
-   transition: all 0.5s ease-in-out;
+.submit:hover {
+  background-color: #18ffff;
+  color: rgb(190, 79, 181);
+  transition: all 0.5s ease-in-out;
 }
 .input:focus ~ .label,
 .input:not(:placeholder-shown).input:not(:focus) ~ .label {
@@ -106,12 +110,12 @@ form {
   left: 0.8rem;
 }
 
-.signUP{
-    color: white;
-    text-decoration: none;
+.signUP {
+  color: white;
+  text-decoration: none;
 }
-.signUP:hover{
-    color: #18ffff ;
+.signUP:hover {
+  color: #18ffff;
 }
 header {
   margin-top: 20px;
@@ -134,8 +138,8 @@ header {
 }
 .fa-heart {
   position: absolute;
-  top: 10px;
-  left: 7px;
+  top: 20px;
+  left: 18px;
 }
 @keyframes heart {
   from {
@@ -155,12 +159,136 @@ header {
 }
 .name {
   display: flex;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 900;
   letter-spacing: 2px;
   color: rgb(228, 98, 174);
 }
 .house-icon {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
+}
+
+@media (min-width: 1024px) {
+  body {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-repeat: no-repeat;
+    font-size: 1.2rem;
+  }
+  .title {
+    margin-bottom: 40px;
+    color: white;
+  }
+  form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .welcome {
+    
+    font-weight: 800;
+    font-size: 40px;
+    color: lightpink;
+  }
+  .formm {
+    position: relative;
+    width: 25rem;
+    height: 4rem;
+  }
+  .input {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #e1e5ee;
+    border-radius: 0.5rem;
+    font-family: inherit;
+    font-size: inherit;
+    color: rgb(63, 143, 196);
+    outline: none;
+    padding: 1.25rem;
+    background: none;
+  }
+
+  .label {
+    position: absolute;
+    left: 1rem;
+    top: 1.2rem;
+    padding: 0 0.5rem;
+    color: rgb(193, 104, 235);
+    background-color: white;
+    cursor: text;
+    font-size: 20px;
+    transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
+  }
+  .submit {
+    width: 150px;
+    height: 50px;
+    background-color: #8b5292;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 15px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    margin-bottom: 30px;
+  }
+
+  .signUP {
+    color: white;
+    text-decoration: none;
+  }
+  .signUP:hover {
+    color: #18ffff;
+  }
+  header {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+  }
+  .home_icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50%;
+    width: 100%;
+  }
+  .name-div {
+    display: flex;
+    width: min-content;
+    align-items: end;
+    gap: 5px;
+    position: relative;
+  }
+  .fa-heart {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+  }
+
+  .heart {
+    width: 5px;
+    height: 5px;
+    color: lightpink;
+    animation-name: heart;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+  }
+  .name {
+    display: flex;
+    font-size: 25px;
+    font-weight: 900;
+    letter-spacing: 2px;
+    color: rgb(228, 98, 174);
+  }
+  .house-icon {
+    width: 60px;
+    height: 60px;
+  }
 }
